Prevent scrolling the canvas behind the splash screen

--- a/app/styles/splash_screen.css
+++ b/app/styles/splash_screen.css
@@ -6,6 +6,8 @@
 	right: 0;
 	bottom: 0;
 	
+	overscroll-behavior: contain;
+	
 	display: -webkit-box;
 	display:    -moz-box;
 	display: -ms-flexbox;
